src/assets/styles/components/_hero.scss
.hero {
    display: flex;
    flex: 1 0 auto;
    flex-direction: column;
    justify-content: center;
    padding: 2rem 0 4rem;

    @include mq(lg) {
        min-height: 500px;
    }

    &__inner {
        display: flex;
        flex-direction: column;
    }

    &__title {
        font-size: 2.5rem;
        line-height: 1;
        margin-bottom: 0.33em;

        @include mq(md) {
            font-size: 5.875rem; //94px
        }
    }
    &__pretitle {
        order: -1;
        font-size: 1.1875rem; //19px
        text-transform: uppercase;
        font-weight: 700;
        letter-spacing: 1px;
        margin-bottom: 1rem;
    }

    &__content {
        font-size: 1.5rem;
        font-weight: 300;
        line-height: 1.4;

        @include mq(md) {
            font-size: 2rem;
        }
    }

    &__br {
        display: none;

        @include mq(xl) {
            display: block;
        }
    }

    &__link {
        display: inline-block;
        color: var(--color-text) !important;
        position: relative;

        &::after,
        &::before {
            content: '';
            display: block;
            height: 0.5em;
            position: absolute;
            left: 0;
            right: 0;
            bottom: 0;
            z-index: -1;
        }

        &::before {
            background-color: var(--color-border);
        }

        &::after {
            background-color: var(--color-primary);
            transform: scaleX(0);
            transform-origin: 0 50%;
            transition: transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
        }

        &:hover::after {
            transform: scaleX(1);
        }
        &--twitter::after {
            background-color: $twitter-brand-primary;
        }
    }
}

